project overflow fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -363,8 +363,14 @@ li .active {
     margin-top: 1rem;
   }
 
+  .projects {
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+  }
+
   .project-card {
-    width: 90vw;
+    width: 100vw;
   }
 
   .project-title {
